--- a/nsf_data_ingestion/models/Working TDIF.ipynb
+++ b/nsf_data_ingestion/models/Working TDIF.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,97 +300,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+------+---------+-----------+--------------------+--------------------+--------------------+--------------------+-------------+----+--------------------+--------+----+-------+--------+\n",
-      "|      id|source|source_id|       type|               title|               venue|            abstract|          scientists|organizations|date|             content|end_date|city|country|other_id|\n",
-      "+--------+------+---------+-----------+--------------------+--------------------+--------------------+--------------------+-------------+----+--------------------+--------+----+-------+--------+\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Electron and nucl...|physics:cond-mat;...|  A novel mathema...|Serra, Sonia Colo...|         null|  \n",
-      " |  A novel mathema...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Uniform fractiona...|          math; stat|  The minimum abe...|Tang, Yu;Xu, Hong...|         null|  \n",
-      " |  The minimum abe...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Bypasses for rect...|                math|  In the present ...|Dynnikov, Ivan;Pr...|         null|  \n",
-      " |  In the present ...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Ultrathin Metalli...|physics:cond-mat;...|  There is an att...|Boström, Mathias;...|         null|  \n",
-      " |  There is an att...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|On a fractional q...|math; physics:mat...|  We use the frac...|     Carroll, Robert|         null|  \n",
-      " |  We use the frac...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Hadronic Equation...|physics:hep-lat; ...|  The equation of...|Tawfik, Abdel Nas...|         null|  \n",
-      " |  The equation of...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Solidification fr...|    physics:cond-mat|  We determine th...|Archer, A. J.;Rob...|         null|  \n",
-      " |  We determine th...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Effects of Variab...|physics:astro-ph;...|  In this paper t...|Abolhasani, Ali A...|         null|  \n",
-      " |  In this paper t...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|The effect of spi...|    physics:cond-mat|  Magnetic inelas...|Heimes, Andreas;G...|         null|  \n",
-      " |  Magnetic inelas...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|A Fuzzy Approach ...|                  cs|  Recent work in ...|Boughamoura, Radh...|         null|  \n",
-      " |  Recent work in ...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|The Fate of Sub-m...|    physics:astro-ph|  We study the ra...|Jontof-Hutter, Da...|         null|  \n",
-      " |  We study the ra...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|The local Tb theo...|                math|  We prove a vers...|Hytönen, Tuomas;N...|         null|  \n",
-      " |  We prove a vers...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Soft Computing in...|                  cs|  This paper focu...|Xing, Bo;Gao, Wen...|         null|  \n",
-      " |  This paper focu...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Resolved stellar ...|    physics:astro-ph|  The expected im...|Greggio, L.;Falom...|         null|  \n",
-      " |  The expected im...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Transition from s...|physics:hep-ph; p...|  We study the nu...|Watanabe, Akira;S...|         null|  \n",
-      " |  We study the nu...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Non-null Infinite...|                  cs|  Many systems in...|Ferrucci, Luca;Ma...|         null|  \n",
-      " |  Many systems in...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Complex deformati...|                math|  In this paper, ...|         Li, Haozhao|         null|  \n",
-      " |  In this paper, ...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Uniform families ...|                math|  We study mean e...|    Schreiber, Marco|         null|  \n",
-      " |  We study mean e...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Weakly-induced st...|physics:hep-ex; p...|  Weak interactio...|Gerard, J. M.;Mer...|         null|  \n",
-      " |  Weak interactio...|    null|null|   null|    null|\n",
-      "|arxiv_\n",
-      " | arxiv|       \n",
-      " |publication|Search for the PN...|physics:astro-ph;...|  In this work, t...|      Kumar, Prayush|         null|  \n",
-      " |  In this work, t...|    null|null|   null|    null|\n",
-      "+--------+------+---------+-----------+--------------------+--------------------+--------------------+--------------------+-------------+----+--------------------+--------+----+-------+--------+\n",
+      "+--------------------+------+--------------------+-----------+--------------------+--------------------+--------------------+--------------------+-------------+----------+--------------------+--------+----+-------+--------+\n",
+      "|                  id|source|           source_id|       type|               title|               venue|            abstract|          scientists|organizations|      date|             content|end_date|city|country|other_id|\n",
+      "+--------------------+------+--------------------+-----------+--------------------+--------------------+--------------------+--------------------+-------------+----------+--------------------+--------+----+-------+--------+\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Yang-Mills instan...|math; physics:hep...|  We present a un...|Gemmer, Karl-Phil...|         null|2011-08-22|  We present a un...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Quantitative spec...|    physics:astro-ph|  The method of s...|Pavlovski, K.;Sou...|         null|2015-05-30|  The method of s...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|           Rejoinder|                stat|  Rejoinder of \"E...|        Morris, Carl|         null|2011-08-22|  Rejoinder of \"E...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Metamaterial-base...|     physics:physics|  We present a me...|Ling, Xiaohui;Luo...|         null|2013-12-24|  We present a me...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Global analysis o...|      physics:hep-ph|  We discuss the ...|de Florian, D.;Sa...|         null|2011-08-22|  We discuss the ...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Reply to Comment ...|    physics:cond-mat|  Recently, Boris...|Putzke, C.;Coldea...|         null|2011-08-22|  Recently, Boris...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|A barium central ...|    physics:astro-ph|  Abell 70 (PN G0...|Miszalski, B.;Bof...|         null|2015-05-30|  Abell 70 (PN G0...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Dixon's Theorem a...|                math|  A transformatio...|   Cameron, Peter J.|         null|2011-08-22|  A transformatio...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Elastic turbulenc...|physics:nlin; phy...|  We report detai...|Jun, Yonggun;Stei...|         null|2015-05-30|  We report detai...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Hydrostatic press...|    physics:cond-mat|  The effect of h...|Gryglas-Borysiewi...|         null|2011-08-22|  The effect of h...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Twisted Traces of...|                math|  We show that th...|Alfes, Claudia;Eh...|         null|2013-04-05|  We show that th...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|The Instabilities...|physics:astro-ph;...|  We investigate ...|Barrow, John D.;Y...|         null|2015-05-30|  We investigate ...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Statistical ensem...|    physics:quant-ph|  We show insurmo...|     Skrebnev, V. A.|         null|2011-08-22|  We show insurmo...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Reply to \"Comment...|    physics:cond-mat|  We discuss the ...|Krstulovic, Giorg...|         null|2011-08-22|  We discuss the ...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Weak martingale r...|                math|  In this paper w...|  Reveillac, Anthony|         null|2011-08-22|  In this paper w...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Implementation of...|physics:cond-mat;...|  The quantum Tof...|Fedorov, Arkady;S...|         null|2013-02-15|  The quantum Tof...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Asymmetric Inelas...|      physics:hep-ph|  The nature of d...|Arina, Chiara;Sah...|         null|2015-05-30|  The nature of d...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Online Expectatio...|          math; stat|  The Expectation...|Corff, Sylvain Le...|         null|2012-10-18|  The Expectation...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|Probing Leptonic ...|physics:hep-ex; p...|  We explore a Z'...|Chiang, Cheng-Wei...|         null|2013-11-05|  We explore a Z'...|    null|null|   null|    null|\n",
+      "|arxiv_oai:arXiv.o...| arxiv|oai:arXiv.org:110...|publication|A Design Methodol...|                  cs|  Semi-parallel, ...|Sharma, Hrishikes...|         null|2012-08-07|  Semi-parallel, ...|    null|null|   null|    null|\n",
+      "+--------------------+------+--------------------+-----------+--------------------+--------------------+--------------------+--------------------+-------------+----------+--------------------+--------+----+-------+--------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
