tracked file in libraries folder

--- a/nsf_data_ingestion/medline/test_parquet.ipynb
+++ b/nsf_data_ingestion/medline/test_parquet.ipynb
@@ -32,25 +32,19 @@
     "from shutil import rmtree\n",
     "from subprocess import call\n",
     "import pubmed_parser as pp\n",
-    "import pyarrow as pa\n",
-    "import subprocess\n",
-    "\n",
-    "#sys.path.append('/home/ananth/nsf_data_ingestion/')\n",
-    "\n",
     "from nsf_data_ingestion.config import spark_config\n",
     "from nsf_data_ingestion.objects import data_source_params\n",
-    "\n",
-    "namenode_url = \"hdfs://ist-deacuna-n1.syr.edu:8020/\""
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "INFO:root:Creating Spark Session....\n"
      ]
@@ -73,69 +67,39 @@
     "\n",
     "        \n",
     "    return spark\n",
-    "spark = create_session()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/user/eileen/test/test/pubmed21n0001.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0002.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0003.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0004.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0005.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0006.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0007.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0008.xml.gz',\n",
-       " '/user/eileen/test/test/pubmed21n0009.xml.gz']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hdfs = pa.hdfs.connect()\n",
-    "file_paths = hdfs.ls('test/test')\n",
-    "hdfs.ls('test/test')"
+    "spark = create_session()\n",
+    "sc = spark.sparkContext\n",
+    "\n",
+    "def parse_gzip_medline_str(gzip_str):\n",
+    "    import pubmed_parser as pp\n",
+    "    import unidecode\n",
+    "    \n",
+    "    filepath = gzip_str[0]\n",
+    "    xml_string = gzip_str[1]\n",
+    "    _, file_name = path.split(filepath)\n",
+    "\n",
+    "    articles = pp.parse_medline_xml(xml_string)\n",
+    "    return [Row(file_name=file_name, **article_dict)\n",
+    "            for article_dict in articles]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Found 9 items\n-rw-r--r--   1 eileen eileen   19679504 2021-04-05 18:02 test/test/pubmed21n0001.xml.gz\n-rw-r--r--   1 eileen eileen   17730921 2021-04-05 18:02 test/test/pubmed21n0002.xml.gz\n-rw-r--r--   1 eileen eileen   16411857 2021-04-05 18:02 test/test/pubmed21n0003.xml.gz\n-rw-r--r--   1 eileen eileen   18077954 2021-04-05 18:02 test/test/pubmed21n0004.xml.gz\n-rw-r--r--   1 eileen eileen   17380728 2021-04-05 18:02 test/test/pubmed21n0005.xml.gz\n-rw-r--r--   1 eileen eileen   20394644 2021-04-05 18:02 test/test/pubmed21n0006.xml.gz\n-rw-r--r--   1 eileen eileen   20479714 2021-04-05 18:02 test/test/pubmed21n0007.xml.gz\n-rw-r--r--   1 eileen eileen   19611972 2021-04-05 18:02 test/test/pubmed21n0008.xml.gz\n-rw-r--r--   1 eileen eileen    9127378 2021-04-05 18:02 test/test/pubmed21n0009.xml.gz\n"
+     ]
+    }
+   ],
    "source": [
-    "sc = spark.sparkContext"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_gzip_medline_str(gzip_str):\n",
-    "    import pubmed_parser as pp\n",
-    "    import unidecode\n",
-    "    \n",
-    "\n",
-    "    filepath = gzip_str[0]\n",
-    "    xml_string = gzip_str[1]\n",
-    "    _, file_name = path.split(filepath)\n",
-    "    # decompress gzip\n",
-    "\n",
-    "    articles = pp.parse_medline_xml(xml_string,nlm_category=True)\n",
-    "    return [Row(file_name=file_name, **article_dict)\n",
-    "            for article_dict in articles]"
+    "!hdfs dfs -ls test/test"
    ]
   },
   {
@@ -146,46 +110,24 @@
    "source": [
     "docs = sc.wholeTextFiles('test/test/pubmed21n0001.xml.gz').repartition(1000)\n",
     "dicts = docs.flatMap(parse_gzip_medline_str)\n",
-    "df = dicts.toDF().toPandas()"
+    "medline_df = dicts.toDF()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "abstract         object\n",
-       "affiliation      object\n",
-       "author           object\n",
-       "country          object\n",
-       "delete             bool\n",
-       "file_name        object\n",
-       "issn_linking     object\n",
-       "journal          object\n",
-       "keywords         object\n",
-       "medline_ta       object\n",
-       "mesh_terms       object\n",
-       "nlm_unique_id    object\n",
-       "other_id         object\n",
-       "pmc              object\n",
-       "pmid             object\n",
-       "pubdate          object\n",
-       "title            object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "+--------+-----------+--------------------+-------------+------+--------------------+------------+-------+--------+--------------------+--------------------+-------------+--------+---+----+-------+--------------------+\n|abstract|affiliation|              author|      country|delete|           file_name|issn_linking|journal|keywords|          medline_ta|          mesh_terms|nlm_unique_id|other_id|pmc|pmid|pubdate|               title|\n+--------+-----------+--------------------+-------------+------+--------------------+------------+-------+--------+--------------------+--------------------+-------------+--------+---+----+-------+--------------------+\n|        |           |AB Makar; KE McMa...|United States| false|pubmed21n0001.xml.gz|   0006-2944|       |        |         Biochem Med|D000445:Aldehyde ...|      0151424|        |   |   1|   1975|Formate assay in ...|\n|        |           |   KS Bose; RH Sarma|United States| false|pubmed21n0001.xml.gz|   0006-291X|       |        |Biochem Biophys R...|D005583:Fourier A...|      0372516|        |   |   2|   1975|Delineation of th...|\n|        |           | RJ Smith; RG Bryant|United States| false|pubmed21n0001.xml.gz|   0006-291X|       |        |Biochem Biophys R...|D000818:Animals; ...|      0372516|        |   |   3|   1975|Metal substitutio...|\n|        |           |UN Wiesmann; S Di...|United States| false|pubmed21n0001.xml.gz|   0006-291X|       |        |Biochem Biophys R...|D001692:Biologica...|      0372516|        |   |   4|   1975|Effect of chloroq...|\n|        |           |WA Hendrickson; K...|United States| false|pubmed21n0001.xml.gz|   0006-291X|       |        |Biochem Biophys R...|D000818:Animals; ...|      0372516|        |   |   5|   1975|Atomic models for...|\n|        |           |YW Chow; R Pietra...|United States| false|pubmed21n0001.xml.gz|   0006-291X|       |        |Biochem Biophys R...|D001665:Binding S...|      0372516|        |   |   6|   1975|Studies of oxygen...|\n|        |           |TR Anderson; TA S...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000313:Adrenal M...|      0101032|        |   |   7|   1975|Maturation of the...|\n|        |           |     K Moroi; T Sato|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000581:Amidohydr...|      0101032|        |   |   8|   1975|Comparison betwee...|\n|        |           |J Marniemi; MG Pa...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000818:Animals; ...|      0101032|        |   |   9|   1975|Radiochemical ass...|\n|        |           |A Schmoldt; HF Be...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000818:Animals; ...|      0101032|        |   |  10|   1975|Digitoxin metabol...|\n|        |           |        RJ Lefkowitz|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000262:Adenylyl ...|      0101032|        |   |  11|   1975|Identification of...|\n|        |           |            JM Stein|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000255:Adenosine...|      0101032|        |   |  12|   1975|The effect of adr...|\n|        |           |J Järvisalo; NE S...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000251:Adenosine...|      0101032|        |   |  13|   1975|Action of propran...|\n|        |           |VM Bhagwat; BV Ra...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000818:Animals; ...|      0101032|        |   |  14|   1975|Malathion A and B...|\n|        |           |N Akamatsu; H Nak...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000106:Acetate-C...|      0101032|        |   |  15|   1975|Increase in acety...|\n|        |           |  AJ Turner; PE Hick|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000445:Aldehyde ...|      0101032|        |   |  16|   1975|Inhibition of ald...|\n|        |           |B Renaud; M Buda;...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D015115:5,6-Dihyd...|      0101032|        |   |  17|   1975|Effects of 5,6-di...|\n|        |           |MM Ris; RA Deitri...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000445:Aldehyde ...|      0101032|        |   |  18|   1975|Inhibition of ald...|\n|        |           |AE Halaris; KT Be...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000818:Animals; ...|      0101032|        |   |  19|   1975|Antidepressant dr...|\n|        |           |W Barthel; F Mark...|      England| false|pubmed21n0001.xml.gz|   0006-2952|       |        |   Biochem Pharmacol|D000818:Animals; ...|      0101032|        |   |  20|   1975|Aggregation of bl...|\n+--------+-----------+--------------------+-------------+------+--------------------+------------+-------+--------+--------------------+--------------------+-------------+--------+---+----+-------+--------------------+\nonly showing top 20 rows\n\n"
+     ]
     }
    ],
    "source": [
-    "df.dtypes\n"
+    "medline_df.s"
    ]
   },
   {
@@ -528,9 +470,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python373jvsc74a57bd09f9127846a4e2991673c18367713baaab9c118995b914f01a7998576a1f0d8bf",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -543,6 +484,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "9f9127846a4e2991673c18367713baaab9c118995b914f01a7998576a1f0d8bf"
+   }
   }
  },
  "nbformat": 4,
