removed pubmedparser fork

--- a/nsf_data_ingestion/medline/test_parquet.ipynb
+++ b/nsf_data_ingestion/medline/test_parquet.ipynb
@@ -582,8 +582,31 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "panda_df = pd.DataFrame(medline_df.head(5), columns=medline_df.columns)\n",
-    "panda_df"
+    "panda_df_new = pd.DataFrame(medline_df.head(5), columns=medline_df.columns)\n",
+    "panda_df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['abstract', 'affiliation', 'author', 'country', 'delete', 'file_name',\n",
+       "       'issn_linking', 'journal', 'keywords', 'medline_ta', 'mesh_terms',\n",
+       "       'nlm_unique_id', 'other_id', 'pmc', 'pmid', 'pubdate', 'title'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "panda_df.columns"
    ]
   },
   {
